# nexel_swallow_library_nx-scaler

./: .gitignore  Android.mk  Makefile  Makefile.am  build.sh  configure.ac  nx-scaler.c  nx-scaler.h  scaler.h
debian/: changelog  control  nx-scaler-dev.install  nx-scaler.install
packaging/: nx-scaler.spec
