AM_CFLAGS = \
	$(WARN_CFLAGS) \
	-I./ \
	-I${includedir}

libnx_scaler_la_LTLIBRARIES = libnx_scaler.la
libnx_scaler_ladir = ${libdir}
libnx_scaler_la_LDFLAGS = -L${libdir}

libnx_scaler_la_SOURCES = \
	nx-scaler.c

libnx_scalerincludedir = ${includedir}
libnx_scalerinclude_HEADERS = \
	nx-scaler.h

